laborations/lab2/testsuite/good/fun-app-state-propagation.cc
int Z(int z) { return z; }

int main() {
  int z = 0;
  Z(++z);
  printInt(z);
  Z(z = z + 1);
  printInt(z);
  return 0;
}
