laborations/lab2/testsuite/bad/redecl-var-after-block-4.cc
int main() {
	int x, y;
	{
		int z;
	}
	int y;
	return 0;
}
